2001-05-20  Elliot Glaysher  <nuriko.chan@home.com>

	* TODO: Created a comicpage section, at the request of Ben. It's mostly
	his work, though I did make some minor revisions.
	* debian/netcomics.menu: Put ComicPage on the Debian menu, under
	Apps->Viewers.
	* debian/netcomics.files: Add "gtkcomics" as a file in this package.
	* Makefile: small tweak so it cleans up after dpkg-buildpackage fully.
	
2001-05-17  Elliot Glaysher  <nuriko.chan@home.com>

	* AUTHORS: Fixed problem with Kai Wurm's name. Oops.
	* Netcomics/Config.pm.in (clear_date_settings): Added POD text for
	this function.
	* Netcomics/Util.pm (in_future): Added this routine to check if a date
	has happened yet.
	* gtkcomics (Display_comic): Use in_future() to check that the user
	didn't click on a date in the future. Added POD text.
	* Netcomics/Util.pm (in_future): I'm a moron. Date checking now works
	for comics with a days behind value.
	
2001-05-16  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* doc/design.dia: Added this class diagram which describes the
	design of the current implementation of netcomics & gtkcomics in
	the OO branch.

2001-05-15  Elliot Glaysher  <nuriko.chan@home.com>

	* AUTHORS: Initial checkin.
	* AUTHORS: Rewrote second heading with Ben's corrections.
	
2001-05-15  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Netcomics/Factory.pm (setup): Removed resetting of
	existing_rli_files.
	* Netcomics/HTML.pm (generate_HTML_page): Fixed use of unitialized
	value.

2001-05-14  Elliot Glaysher  <nuriko.chan@home.com>

	* Netcomics/Factory.pm (get_comic): Changed code so it doesn't use
	gotos. I think this fixes it.
	* gtkcomics: Use the progress bar. Supposedly...

2001-05-14  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Netcomics/GtkComics.pm: added using strict;
	* Netcomics/Config.pm.in: Added pod.
	(clear_date_settings): Fixed resetting of config options.
	(processARGV): Fixed call to Util::mkgmtime.