@@ -1,3 +1,12 @@
+2001-05-21  Elliot Glaysher  <nuriko.chan@home.com>
+
+	* The kind people at sourceforge have moved the gtkcomics file to
+	comicpage.
+	* Makefile: Update from gtkcomics to comicpage
+	* debian/netcomics.files: It's no longer /usr/bin/gtkcomics...
+	* debian/netcomics.menu:  "                                  "
+	* comicpage: Changed various instances of gtkcomics to ComicPage
+	
 2001-05-20  Elliot Glaysher  <nuriko.chan@home.com>
 
 	* TODO: Created a comicpage section, at the request of Ben. It's mostly
